name:                tiny-tiny-lisp
version:             0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ExcaliburZero/tiny-tiny-lisp#readme
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter.TinyTinyLisp.Lexer
                     , Interpreter.TinyTinyLisp.Parser
                     , Interpreter.TinyTinyLisp.Tokens
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , safe
  default-language:    Haskell2010

executable tiny-tiny-lisp-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiny-tiny-lisp
  default-language:    Haskell2010

test-suite tiny-tiny-lisp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiny-tiny-lisp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tiny-tiny-lisp
