name:                tiny-tiny-lisp
version:             0.1.0
synopsis:            An interpreter for a small lisp dialect.
description:         Tiny Tiny Lisp is a small implementation of an interpreter for a small lisp dialect.
homepage:            https://github.com/ExcaliburZero/tiny-tiny-lisp
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter.TinyTinyLisp.Lexer
                     , Interpreter.TinyTinyLisp.Parser
                     , Interpreter.TinyTinyLisp.Tokens
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , safe
  default-language:    Haskell2010

executable tiny-tiny-lisp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline
                     , parsec
                     , tiny-tiny-lisp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tiny-tiny-lisp
